# security-related-projects

./: .gitignore
aes-file-encryption-openssl/: .gitignore  README.md  main.cpp
least-privilege-principle/: README.md  main.cpp
least-privilege-principle/TimeSetting/: set_time.cpp
sha512-proof-of-work/: .gitignore  CMakeLists.txt  README.md  main.cpp
